--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "dashboard",
   "version": "0.0.1",
   "type": "module",
   "private": true,
@@ -14,7 +14,7 @@
   "dependencies": {
     "@workspace/ui": "workspace:*",
     "lucide-react": "^0.475.0",
-    "next": "^15.2.3",
+    "next": "15.4.0-canary.47",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
