--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,10 @@ node_modules
 .env.test.local
 .env.production.local
 
+!apps/dashboard/.env
 !packages/db/.env
+!packages/auth/.env
+!packages/lib/.env
 
 # Testing
 coverage
