--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,12 +12,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@workspace/auth": "workspace:*",
+    "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "@daveyplate/better-auth-ui": "^2.0.8",
+    "better-auth": "^1.2.10",
     "lucide-react": "^0.475.0",
     "next": "15.4.0-canary.47",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.7"
   },
   "devDependencies": {
     "@types/node": "^20",
