--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "dotenvx": "dotenvx",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
@@ -21,5 +22,8 @@
   "packageManager": "pnpm@10.4.1",
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "@dotenvx/dotenvx": "^1.45.1"
   }
 }
