--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,9 +11,12 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@workspace/db": "workspace:*",
-    "bcryptjs": "^3.0.2",
-    "jose": "^6.0.11",
-    "zod": "^3.24.2"
+    "@workspace/lib": "workspace:*",
+    "@workspace/emails": "workspace:*",
+    "@daveyplate/better-auth-ui": "^2.0.8",
+    "better-auth": "^1.2.10",
+    "drizzle-orm": "^0.44.2",
+    "zod": "^3.25.7"
   },
   "peerDependencies": {
     "next": "15.4.0-canary.47"
