--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -12,7 +12,8 @@
     "@workspace/ui": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
+    "next-themes": "^0.4.4"
   },
   "devDependencies": {
     "typescript": "^5",
