--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ node_modules
 .env.production.local
 
 !apps/dashboard/.env
+!apps/landing/.env
 !packages/db/.env
 !packages/auth/.env
 !packages/lib/.env
