--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "touch ../../.env && cd ../../ && pnpm db:migrate && cd - && next build",
+    "build": "touch ../../.env && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
