--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 3001",
-    "build": "touch ../../.env && cd ../../ && pnpm db:migrate && cd - && next build",
+    "build": "touch ../../.env && next build",
     "start": "next start",
     "lint": "next lint"
   },
