--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,10 +6,10 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "dirzzle:pull": "drizzle-kit pull",
-    "dirzzle:generate": "drizzle-kit generate",
-    "dirzzle:migrate": "drizzle-kit migrate",
-    "dirzzle:studio": "drizzle-kit studio",
+    "dirzzle:pull": "drizzle-kit pull --config ./drizzle/drizzle.config.ts",
+    "dirzzle:generate": "drizzle-kit generate --config ./drizzle/drizzle.config.ts",
+    "dirzzle:migrate": "drizzle-kit migrate --config ./drizzle/drizzle.config.ts",
+    "dirzzle:studio": "drizzle-kit studio --config ./drizzle/drizzle.config.ts",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push --skip-generate",
     "prisma:pull": "prisma db pull",
