--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,10 +11,11 @@
     "dirzzle:migrate": "drizzle-kit migrate --config ./drizzle/drizzle.config.ts",
     "dirzzle:studio": "drizzle-kit studio --config ./drizzle/drizzle.config.ts",
     "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push --skip-generate",
+    "prisma:push": "prisma db push",
     "prisma:pull": "prisma db pull",
     "prisma:migrate:dev": "prisma migrate dev",
-    "prisma:migrate:prod": "prisma migrate deploy"
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:migrate:reset": "prisma migrate reset"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
@@ -24,15 +25,15 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@prisma/adapter-pg": "^6.10.1",
-    "@prisma/client": "^6.10.1",
+    "@prisma/adapter-pg": "6.16.2",
+    "@prisma/client": "6.16.2",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "postgres": "^3.4.7"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.2",
-    "prisma": "^6.10.1",
+    "prisma": "6.16.2",
     "tsx": "^4.20.3"
   }
 }
