--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db:ci": "pnpm --filter @workspace/db prisma:generate && pnpm --filter @workspace/db dirzzle:migrate",
+    "db:ci": "pnpm --filter @workspace/db prisma:generate",
     "db:generate": "pnpm --filter @workspace/db drizzle:generate",
     "db:migrate": "pnpm --filter @workspace/db dirzzle:migrate",
     "db:studio": "pnpm --filter @workspace/db dirzzle:studio",
