--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ EMAIL_SERVER=smtp://localhost:1025
 RESEND_API_KEY=XXX
 GOOGLE_CLIENT_ID=XXX
 GOOGLE_CLIENT_SECRET=XXX
-EMAIL_FROM=mail@re.notifications.lovadesk.com
+EMAIL_FROM=mail@re.notifications.lovarank.com
