--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,14 +9,15 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "stripe:dev": "stripe listen --forward-to localhost:3000/api/auth/stripe/webhook"
   },
   "dependencies": {
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "@daveyplate/better-auth-ui": "^2.0.8",
-    "better-auth": "^1.2.10",
+    "@daveyplate/better-auth-ui": "^3.2.5",
+    "better-auth": "^1.3.16",
     "lucide-react": "^0.475.0",
     "next": "15.4.0-canary.47",
     "next-themes": "^0.4.4",
