--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@workspace/db": "workspace:*",
-    "@workspace/lib": "workspace:*",
-    "@workspace/emails": "workspace:*",
+    "@better-auth/stripe": "^1.3.16",
     "@daveyplate/better-auth-ui": "^2.0.8",
-    "better-auth": "^1.2.10",
+    "@workspace/db": "workspace:*",
+    "@workspace/emails": "workspace:*",
+    "@workspace/lib": "workspace:*",
+    "better-auth": "^1.3.16",
+    "stripe": "^18.0.0",
     "zod": "^3.25.7"
   },
   "peerDependencies": {
