--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -20,7 +20,7 @@
     "feed": "^5.1.0",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.475.0",
-    "next": "15.3.4",
+    "next": "15.4.0-canary.47",
     "next-sanity": "^9.12.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
