--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
+  "exports": {
+    "./client": "./client.ts",
+    "./server": "./server.ts",
+    "./session": "./session.ts"
+  },
   "dependencies": {
     "@better-auth/stripe": "^1.3.16",
     "@daveyplate/better-auth-ui": "^2.0.8",
     "@workspace/db": "workspace:*",
     "@workspace/emails": "workspace:*",
-    "@workspace/lib": "workspace:*",
+    "@paralleldrive/cuid2": "^2.2.2",
     "better-auth": "^1.3.16",
     "stripe": "^18.0.0",
     "zod": "^3.25.7"
