--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -10,7 +10,15 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "@types/nodemailer": "^6.4.17",
-    "nodemailer": "^7.0.3"
+    "@workspace/auth": "workspace:*",
+    "@workspace/db": "workspace:*",
+    "nodemailer": "^7.0.3",
+    "react": "^19.0.0",
+    "zod": "^3.25.7"
+  },
+  "peerDependencies": {
+    "next": "15.4.0-canary.47"
   }
 }
