--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -10,8 +10,15 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.0",
+    "@mastra/core": "^0.19.1",
+    "@mastra/libsql": "^0.15.0",
+    "@mastra/loggers": "^0.10.14",
+    "@mastra/memory": "^0.15.4",
+    "@mastra/pg": "^0.17.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.0.0",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "nodemailer": "^7.0.3",
@@ -19,6 +26,6 @@
     "zod": "^3.25.7"
   },
   "peerDependencies": {
-    "next": "15.4.0-canary.47"
+    "next": "15.5"
   }
 }
