--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,13 +13,19 @@
     "stripe:dev": "stripe listen --forward-to localhost:3000/api/auth/stripe/webhook"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.0",
+    "@daveyplate/better-auth-ui": "^3.2.5",
+    "@mastra/core": "^0.19.1",
+    "@mastra/libsql": "^0.15.0",
+    "@mastra/loggers": "^0.10.14",
+    "@mastra/memory": "^0.15.4",
+    "@mastra/pg": "^0.17.0",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "@daveyplate/better-auth-ui": "^3.2.5",
     "better-auth": "^1.3.16",
     "lucide-react": "^0.475.0",
-    "next": "15.4.0-canary.47",
+    "next": "15.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +37,7 @@
     "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
+    "ignore-loader": "^0.1.2",
     "typescript": "^5.7.3"
   }
 }
