--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"],
-      "passThroughEnv": ["RESEND_API_KEY", "DATABASE_URL"]
+      "passThroughEnv": ["*"]
     },
     "lint": {
       "dependsOn": ["^lint"]
