--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.0",
+    "@ai-sdk/openai": "^2.0.42",
     "@mastra/core": "^0.19.1",
     "@mastra/libsql": "^0.15.0",
     "@mastra/loggers": "^0.10.14",
@@ -21,9 +21,11 @@
     "@types/react": "^19.0.0",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
-    "zod": "^3.25.7"
+    "zod": "^3.25.76"
   },
   "peerDependencies": {
     "next": "15.5"
