--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -23,6 +23,7 @@
     "@workspace/db": "workspace:*",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
+    "dataforseo-client": "^1.0.25",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "zod": "^3.25.76"
