--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,9 +23,11 @@
     "@workspace/lib": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.63.0",
     "sonner": "^2.0.5",
