--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,6 +31,8 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.63.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.0.1",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/typography": "^0.5.19",
     "@turbo/gen": "^2.4.2",
     "@types/node": "^20",
     "@types/react": "^19",
