--- a/apps/workers/package.json
+++ b/apps/workers/package.json
@@ -5,7 +5,7 @@
     "deploy": "wrangler deploy --minify src/index.ts",
     "dotenv": "dotenv -e ../../.env.local",
     "create-queue": "wrangler queues create generic-queue",
-    "link-env": "ln -sf ../../.env.local .dev.vars"
+    "link-env": "ln -sf ../../.env .dev.vars"
   },
   "dependencies": {
     "hono": "^4.5.5"
