--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -24,8 +24,10 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "dataforseo-client": "^1.0.25",
+    "ky": "^1.11.0",
     "marked": "^16.3.0",
     "nodemailer": "^7.0.3",
+    "p-map": "^7.0.3",
     "react": "^19.0.0",
     "zod": "^3.25.76"
   },
