--- a/apps/workers/wrangler.toml
+++ b/apps/workers/wrangler.toml
@@ -1,12 +1,12 @@
-name = "videopal"
+name = "lovarank"
 compatibility_date = "2024-08-17"
 
 [[queues.producers]]
-  queue = "generic-queue"
-  binding = "GENERIC_QUEUE"
+queue = "generic-queue"
+binding = "GENERIC_QUEUE"
 
 [[queues.consumers]]
-  queue = "generic-queue"
-  max_batch_size = 1
-  max_batch_timeout = 0
-  max_concurrency = 4
+queue = "generic-queue"
+max_batch_size = 1
+max_batch_timeout = 0
+max_concurrency = 4
