--- a/apps/workers/package.json
+++ b/apps/workers/package.json
@@ -4,7 +4,7 @@
     "dev": "pnpm link-env && wrangler dev src/index.ts",
     "deploy": "wrangler deploy --minify src/index.ts",
     "dotenv": "dotenv -e ../../.env.local",
-    "create-queue": "wrangler queues create generic-queue",
+    "create-queue": "wrangler queues create lovarank-generic-queue",
     "link-env": "ln -sf ../../.env .dev.vars"
   },
   "dependencies": {
