--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.5",
     "next-themes": "^0.4.4",
+    "p-map": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
