--- a/apps/dashboard/vercel.json
+++ b/apps/dashboard/vercel.json
@@ -2,8 +2,12 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "crons": [
     {
-      "path": "/api/crons/articles-generations",
+      "path": "/api/crons/article-generation",
       "schedule": "0 5 * * *"
+    },
+    {
+      "path": "/api/crons/content-planner",
+      "schedule": "0 1 * * *"
     }
   ]
 }
