--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,6 +6,7 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
+    "build": "pnpm prisma:generate",
     "dirzzle:pull": "drizzle-kit pull --config ./drizzle/drizzle.config.ts",
     "dirzzle:generate": "drizzle-kit generate --config ./drizzle/drizzle.config.ts",
     "dirzzle:migrate": "drizzle-kit migrate --config ./drizzle/drizzle.config.ts",
