--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -36,9 +36,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22.0.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "ignore-loader": "^0.1.2",
