--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,16 +16,16 @@
     "@next/third-parties": "^15.5.4",
     "@supabase/supabase-js": "^2.58.0",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.0.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "aos": "3.0.0-beta.6",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.544.0",
-    "next": "15.1.7",
+    "lucide-react": "^0.475.0",
+    "next": "15.5",
     "next-mdx-remote": "^5.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rehype-pretty-code": "^0.14.0",
     "shiki": "^1.3.0",
     "typescript": "^5.7.3"
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.8",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8"
