--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "db:studio": "pnpm --filter @workspace/db dirzzle:studio",
     "better-auth:generate": "dotenvx run -- npx @better-auth/cli generate --output ./packages/db/prisma/schema.prisma --config ./packages/auth/server.ts",
     "docker:up": "docker compose -f docker/docker-compose.deps.yml --env-file docker/docker.env up -d",
-    "docker:down": "docker compose -f docker/docker-compose.deps.yml down"
+    "docker:down": "docker compose -f docker/docker-compose.deps.yml down",
+    "list-mismatches": "npx syncpack list-mismatches",
+    "fix-mismatches": "npx syncpack fix-mismatches",
+    "check": "pnpm list-mismatches"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "prettier": "^3.5.1",
     "turbo": "^2.4.2",
-    "typescript": "5.7.3"
+    "typescript": "^5.7.3"
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
