--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -12,8 +12,8 @@
   "packageManager": "pnpm@10.4.1",
   "devDependencies": {
     "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "react-email": "^4.2.3"
   },
   "dependencies": {
