--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -18,7 +18,7 @@
     "@mastra/pg": "^0.17.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.0.0",
+    "@types/react": "19.0.10",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "axios": "^1.12.2",
