--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,17 +45,17 @@
     "@tailwindcss/postcss": "^4.0.8",
     "@tailwindcss/typography": "^0.5.19",
     "@turbo/gen": "^2.4.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22.0.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
-    "next": "^15.1.4",
+    "next": "15.5",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3"
   },
   "peerDependencies": {
-    "next": "^15.0.0",
+    "next": "15.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
