--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -16,6 +16,7 @@
     "@mastra/loggers": "^0.10.14",
     "@mastra/memory": "^0.15.4",
     "@mastra/pg": "^0.17.0",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.10",
