--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -14,6 +14,7 @@
     "@mastra/core": "^0.19.1",
     "@mastra/libsql": "^0.15.0",
     "@mastra/loggers": "^0.10.14",
+    "@mastra/mcp": "^0.13.4",
     "@mastra/memory": "^0.15.4",
     "@mastra/pg": "^0.17.0",
     "@openrouter/ai-sdk-provider": "^1.2.0",
