--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -21,6 +21,7 @@
     "@mastra/mcp": "^0.13.4",
     "@mastra/memory": "^0.15.4",
     "@mastra/pg": "^0.17.0",
+    "@prisma/client": "6.16.2",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
@@ -29,6 +30,7 @@
     "next": "15.5",
     "next-themes": "^0.4.4",
     "p-map": "^7.0.3",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
