--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.3",
     "p-map": "^7.0.3",
     "react": "^19.0.0",
+    "replicate": "^1.3.0",
     "zod": "^3.25.76"
   },
   "peerDependencies": {
