--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@workspace/eslint-config": "workspace:*",
     "@ai-sdk/openai": "^2.0.42",
     "@mastra/core": "^0.19.1",
     "@mastra/libsql": "^0.15.0",
