--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.45.1"
+    "@dotenvx/dotenvx": "^1.45.1",
+    "eslint": "^9.20.1"
   }
 }
