--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -29,13 +29,16 @@
   "dependencies": {
     "@prisma/adapter-pg": "6.16.2",
     "@prisma/client": "6.16.2",
+    "@vercel/functions": "^3.1.4",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "pg": "^8.13.1",
     "postgres": "^3.4.7",
     "prisma": "6.16.2"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.2",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "@types/pg": "^8.13.1"
   }
 }
