--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -34,6 +34,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
+    "stripe": "^18.0.0",
     "tailwindcss": "^4.0.8",
     "zod": "^3.25.76"
   },
