--- a/docker/docker-compose.all.yml
+++ b/docker/docker-compose.all.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   maildev:
@@ -7,8 +7,8 @@ services:
     # Server is accessible at localhost:1025, using app.env default config.
     image: maildev/maildev
     ports:
-      - '1080:1080'
-      - '${MAILDEV_PORT}:1025'
+      - "1080:1080"
+      - "${MAILDEV_PORT}:1025"
   base-api:
     extends:
       file: docker-compose.app.yml
@@ -23,7 +23,7 @@ services:
     image: qdrant/qdrant:v1.6.1
     mem_limit: 450m
     ports:
-      - '127.0.0.1:${QDRANT_PORT}:6333'
+      - "127.0.0.1:${QDRANT_PORT}:6333"
     volumes:
       - ./data/qdrant_storage:/qdrant/storage
 
@@ -33,9 +33,9 @@ services:
     volumes:
       - type: volume
         source: pgdb-data
-        target: '/var/lib/postgresql/data'
+        target: "/var/lib/postgresql/data"
     ports:
-      - '127.0.0.1:${DBPORT}:5432'
+      - "127.0.0.1:${DBPORT}:5432"
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: ${DBUSER}
@@ -78,14 +78,14 @@ services:
         target: /root/.pgadmin
     restart: unless-stopped
     ports:
-      - '127.0.0.1:${PGADMIN_PORT}:5050'
+      - "127.0.0.1:${PGADMIN_PORT}:5050"
 
   redis:
-    image: 'redis:6'
-    user: '999:999'
+    image: "redis:6"
+    user: "999:999"
     # command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
-      - '127.0.0.1:${REDIS_PORT}:6379'
+      - "127.0.0.1:${REDIS_PORT}:6379"
     volumes:
       - redis-data:/data
       - redis-conf:/usr/local/etc/redis/redis.conf
@@ -101,15 +101,15 @@ services:
 
   # Use minio to mock s3
   minio:
-    image: 'minio/minio:latest'
+    image: "minio/minio:RELEASE.2024-11-07T00-52-20Z"
     ports:
-      - '9000:9000'
-      - '9090:9090'
+      - "9000:9000"
+      - "9090:9090"
     environment:
-      MINIO_ROOT_USER: 'root'
-      MINIO_ROOT_PASSWORD: 'password'
+      MINIO_ROOT_USER: "root"
+      MINIO_ROOT_PASSWORD: "password"
     volumes:
-      - 'minio:/data/minio'
+      - "minio:/data/minio"
     command: minio server /data/minio --console-address ":9090"
 volumes:
   pgdb-data:
