--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,10 +17,12 @@
     "prisma:pull": "prisma db pull",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:prod": "prisma migrate deploy",
-    "prisma:migrate:reset": "prisma migrate reset"
+    "prisma:migrate:reset": "prisma migrate reset",
+    "prisma:seed": "prisma db seed"
   },
   "prisma": {
-    "schema": "prisma/schema.prisma"
+    "schema": "prisma/schema.prisma",
+    "seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
