feat: internal linking feature

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "dataforseo-client": "^1.0.25",
+    "fast-xml-parser": "^5.3.0",
     "ky": "^1.11.0",
     "marked": "^16.3.0",
     "nodemailer": "^7.0.3",
