--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -26,6 +26,7 @@
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
     "better-auth": "^1.3.24",
+    "fast-xml-parser": "^5.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.5",
     "next-themes": "^0.4.4",
