wordpress plugin public url

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ packages/db/prisma/generated/
 
 apps/mastra.db*
 
-packages/plugins/wordpress/lovarank.zip
+packages/plugins/wordpress/trunk/lovarank.zip
+packages/plugins/wordpress/tags/*
 
 docker/data/*
+
