fix wordpress dev command

--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "cd wordpress && docker-compose up"
+    "dev": "cd wordpress/trunk && docker-compose up"
   },
   "keywords": [],
   "author": "",
