setup google analytics

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -21,6 +21,7 @@
     "@mastra/mcp": "^0.13.4",
     "@mastra/memory": "^0.15.4",
     "@mastra/pg": "^0.17.0",
+    "@next/third-parties": "^15.5.4",
     "@prisma/client": "6.16.2",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
