--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@workspace/ui": "workspace:*",
     "aos": "3.0.0-beta.6",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
