--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^3.2.5",
     "@headlessui/react": "^2.2.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
