--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -18,6 +18,7 @@
     "@mastra/memory": "^0.15.4",
     "@mastra/pg": "^0.17.0",
     "@microsoft/clarity": "^1.0.0",
+    "@next/third-parties": "^15.5.4",
     "@openrouter/ai-sdk-provider": "^1.2.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/nodemailer": "^6.4.17",
