feat(jobs): send email when content planner is ready

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -25,6 +25,7 @@
     "@types/react": "19.0.10",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
+    "@workspace/emails": "workspace:*",
     "@workspace/eslint-config": "workspace:*",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.12.2",
