--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.42",
     "@daveyplate/better-auth-ui": "^3.2.5",
     "@headlessui/react": "^2.2.0",
     "@mdx-js/loader": "^3.1.0",
@@ -21,7 +22,10 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@workspace/ui": "workspace:*",
+    "ai": "^5.0.84",
     "aos": "3.0.0-beta.6",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.5",
@@ -38,6 +42,7 @@
     "@tailwindcss/postcss": "^4.0.8",
     "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
+    "@types/cheerio": "^0.22.35",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8"
   }
