--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -22,6 +22,8 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@workspace/ui": "workspace:*",
+    "@workspace/db": "workspace:*",
+    "pg": "^8.13.1",
     "ai": "^5.0.84",
     "aos": "3.0.0-beta.6",
     "axios": "^1.12.2",
@@ -43,6 +45,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
     "@types/cheerio": "^0.22.35",
+    "@types/pg": "^8.13.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8"
   }
