fix(landing): blog post idea

--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -23,8 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@workspace/ui/*": ["../../packages/ui/src/*"],
-      "@workspace/lib/*": ["../../packages/lib/*"],
-      "@workspace/db/*": ["../../packages/db/*"]
+      "@workspace/lib/*": ["../../packages/lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
