--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -26,7 +26,10 @@
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "ai": "^5.0.84",
+    "axios": "^1.12.2",
     "better-auth": "^1.3.24",
+    "cheerio": "^1.1.2",
     "fast-xml-parser": "^5.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.5",
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^22.0.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
