--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@vercel/og": "^0.8.5",
     "@workspace/ui": "workspace:*",
     "aos": "3.0.0-beta.6",
     "cheerio": "^1.1.2",
